--- a/README.html
+++ b/README.html
@@ -1,4 +1,7 @@
-# KafifLauncher Mobile App
+<html>
+  <head></head>
+  <body>
+  # KafifLauncher Mobile App
 واجهة مستخدم صوتية لاستخدام الهواتف الذكية والأجهزة اللوحية للمكفوفين
 
 واجهة مستخدم صوتية لاستخدام الهواتف الذكية والأجهزة اللوحية للمكفوفين
@@ -11,3 +14,6 @@
 إضافة و إدارة المنبهات (Alarms)
 تسجيل و إدارة التسجيلات الميكروفونية
 اطلاع و استخدام التطبيقات المثبتة مسبقا و التي تدعم TalkBack (كتطبيق الواتسآب)
+  </body>
+</html>
+
