--- a/README.html
+++ b/README.html
@@ -1,6 +1,6 @@
 <html>
   <head></head>
-  <body>
+  <body dir="rtl">
   # KafifLauncher Mobile App
 واجهة مستخدم صوتية لاستخدام الهواتف الذكية والأجهزة اللوحية للمكفوفين
 
