--- a/appprivacy.html
+++ b/appprivacy.html
@@ -2,6 +2,8 @@
 <body>
 <h2>Google Play mobile apps privacy policy</h2>
 
-The 7odoor mobile application available on the Google Play platform. By installing the application you accept the relative conditions, including push notifications. The information collected within our application will only be used for the development of the application and will never be passed on to third parties. You have the right to access and modify your data in accordance with the "Informatique & Libertés" law. You can contact us for any information or questions on our address: azdineh@gmail.com
+<p style="width:75%" >
+  The 7odoor mobile application available on the Google Play platform. By installing the application you accept the relative conditions, including push notifications. The information collected within our application will only be used for the development of the application and will never be passed on to third parties. You have the right to access and modify your data in accordance with the "Informatique & Libertés" law. You can contact us for any information or questions on our address: azdineh@gmail.com
+  </p>
 </body>
 </html>
